--- a/src/help/html/Exportar.html
+++ b/src/help/html/Exportar.html
@@ -1,12 +1,22 @@
 <html>
 	<head>
 	<title>Ayuda Exportar</title>
+  <style type="text/css">
+ 	 body {
+  	 	font-family:tahoma;
+  	 }
+  	 h1{
+  	 	color: #01DF74;
+  	 	font-weight:bold;
+  	 	word-spacing:2pt;
+  	 	font-size:15px;
+	  }
+  </style>
+  
 	</head>
 	<body>
 	<h1>Ayuda Ventana Exportar</h1>
-	<h2>Página de ayuda /h2>
-	<p>Esta es la pagina de Ayuda del método Exportar<br />Podemos incluir Imagenes y cualquier elemento que quieras!</p>
-	<p>En esta página aparecerá toda la información acerca de la pantalla Exportar. <p>
+	<p>En esta página aparecerá toda la información acerca de la pantalla Exportar.<p>
 	<p> Para exportar un fichero, deberemos seleccionar el directorio pulsando sobre el botón Browse e introducir el nombre que pondremos al fichero
 	dentro de la carpeta seleccionada </p>
 	<p> Una vez seleccionado el directorio, se seleccionará el formato sobre el que se quiera exportar. En caso de haber seleccionado una
