--- a/src/help/html/Floyd.html
+++ b/src/help/html/Floyd.html
@@ -1,6 +1,17 @@
 <html>
 	<head>
 	<title>Ayuda Floyd</title>
+  <style type="text/css">
+ 	 body {
+  	 	font-family:tahoma;
+  	 }
+  	 h1{
+  	 	color: #01DF74;
+  	 	font-weight:bold;
+  	 	word-spacing:2pt;
+  	 	font-size:15px;
+	  }
+  </style>
 	</head>
 	<body>
 	<h1>Ayuda Ventana Problema Floyd</h1>
