--- a/src/help/html/Matrices.html
+++ b/src/help/html/Matrices.html
@@ -1,6 +1,17 @@
 <html>
 	<head>
 	<title>Ayuda Matrices</title>
+	 <style type="text/css">
+ 	 body {
+  	 	font-family:tahoma;
+  	 }
+  	 h1{
+  	 	color: #01DF74;
+  	 	font-weight:bold;
+  	 	word-spacing:2pt;
+  	 	font-size:15px;
+	  }
+ 	 </style>
 	</head>
 	<body>
 	<h1>Ayuda Ventana Problema de Multiplicación de Matrices Encadenadas</h1>
