--- a/src/help/html/Recuperar.html
+++ b/src/help/html/Recuperar.html
@@ -1,10 +1,20 @@
 <html>
 	<head>
 	<title>Ayuda Recuperar</title>
+  <style type="text/css">
+ 	 body {
+  	 	font-family:tahoma;
+  	 }
+  	 h1{
+  	 	color: #01DF74;
+  	 	font-weight:bold;
+  	 	word-spacing:2pt;
+  	 	font-size:15px;
+	  }
+  </style>
 	</head>
 	<body>
 	<h1>Ayuda Ventana Recuperar</h1>
-	<h2>Página de ayuda /h2>
 	<p>Esta es la pagina de Ayuda de la ventana Recuperar<br /></p>
 	<p>En esta página aparecerá toda la información acerca de la pantalla Recuperar. <p>
 	<p>Para recuperar un problema, habrá que introducir una semilla válidad en el textbox Semilla</p>
