--- a/src/help/html/Subsecuencia.html
+++ b/src/help/html/Subsecuencia.html
@@ -1,14 +1,24 @@
 <html>
 	<head>
 	<title>Ayuda Subsecuencia Comun</title>
+	  <style type="text/css">
+ 	 body {
+  	 	font-family:tahoma;
+  	 }
+  	 h1{
+  	 	color: #01DF74;
+  	 	font-weight:bold;
+  	 	word-spacing:2pt;
+  	 	font-size:15px;
+	  }
+  </style>
 	</head>
 	<body>
 	<h1>Ayuda Ventana Problema Subsecuencia Comun Mas Larga</h1>
-	<h2>Página de ayuda del problema de la Subsecuencia Comun/h2>
-	<p>En esta página aparecerá toda la información acerca de la pantalla para generar el problema de la Subsecuencia Comun Mas Larga. <p>
+	<p>En esta página aparecerá toda la información acerca de la pantalla para generar el problema de la Subsecuencia Común Más Larga. <p>
 	<p>Para generar el problema deberemos establecer los parámetros pedidos por la herramienta. La pantalla aparecerá con valores por defecto que podrán
 		ser modificados por el usuario en cualquier momento.</p>
-	<p>Una vez establecidos los parámetros deseados, pulsaremos el botón Generar para crear el problema del tipo Subsecuencia Comun.<p>
+	<p>Una vez establecidos los parámetros deseados, pulsaremos el botón Generar para crear el problema del tipo Subsecuencia Común.<p>
 	<p>En el panel de al lado, de Vista Preliminar, aparecerán todos los problemas que se han generado, si se pulsa el botón limpiar reseteará todo
 	el panel, aunque no perderá los problemas generados.<p>
 		<p>Si se pulsa el botón exportar, la aplicación llevará diretamente a la ventana Exportar<a href="html/ExportarAyuda.html">.<p>
