--- a/src/help/html/Mochila.html
+++ b/src/help/html/Mochila.html
@@ -1,16 +1,28 @@
 <html>
 	<head>
 	<title>Ayuda Mochila</title>
+  <style type="text/css">
+ 	 body {
+  	 	font-family:tahoma;
+  	 }
+  	 h1{
+  	 	color: #01DF74;
+  	 	font-weight:bold;
+  	 	word-spacing:2pt;
+  	 	font-size:15px;
+	  }
+  </style>
 	</head>
 	<body>
 	<h1>Ayuda Ventana Mochila</h1>
-	<h2>Página de ayuda del problema de la Mochila/h2>
 	<p>En esta página aparecerá toda la información acerca de la pantalla para generar el problema de la Mochila. <p>
 	<p>Para generar el problema deberemos establecer los parámetros pedidos por la herramienta. La pantalla aparecerá con valores por defecto que podrán
 		ser modificados por el usuario en cualquier momento.</p>
+	<img src="../../images/ayMochila01.jpg" >
 	<p>Una vez establecidos los parámetros deseados, pulsaremos el botón Generar para crear el problema del tipo Mochila.<p>
 	<p>En el panel de al lado, de Vista Preliminar, aparecerán todos los problemas que se han generado, si se pulsa el botón limpiar reseteará todo
 	el panel, aunque no perderá los problemas generados.<p>
-		<p>Si se pulsa el botón exportar, la aplicación llevará diretamente a la ventana Exportar<a href="html/ExportarAyuda.html">.<p>
+	<p>Si se pulsa el botón exportar, la aplicación llevará diretamente a la ventana Exportar<a href="html/ExportarAyuda.html">.<p>
+	<img src="../../images/ayVistaPreliminar.jpg" >
 	</body>
 </html>
