--- a/src/help/html/principal.html
+++ b/src/help/html/principal.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Crear Ventanas de Ayuda con JavaHelp</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <style type="text/css">
  	 body {
   	 	font-family:tahoma;
