--- a/src/help/html/Subsecuencia.html
+++ b/src/help/html/Subsecuencia.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 	<title>Ayuda Subsecuencia Comun</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	  <style type="text/css">
  	 body {
   	 	font-family:tahoma;
