versión defensa con las siguientes correcciones:
Corrección problema multiplicación de matrices, 
scr/problemas/MultiplicaMatrices

Completar ayudar
src/help

cambiar iconos de pantalla principal
src/gui/Inicio

--- a/src/help/html/Exportar.html
+++ b/src/help/html/Exportar.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	<title>Ayuda Exportar</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
   <style type="text/css">
  	 body {
   	 	font-family:tahoma;
@@ -22,6 +22,7 @@
 	dentro de la carpeta seleccionada </p>
 	<p> Una vez seleccionado el directorio, se seleccionará el formato sobre el que se quiera exportar. En caso de haber seleccionado una
 	extensión a la hora de escribir el nombre, la selección seleccionada machacará lo escrito y lo almacenará en su formato <p>
+	<img src="../../images/ayPantExportar.png" >
 	<p color ="red"> Si no se ha generado ningún problema, a la hora de pulsar el botón Exportar aparecerá un mensaje informando de la situación </p>
 	</body>
 </html>
