--- a/src/help/html/Recuperar.html
+++ b/src/help/html/Recuperar.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 	<title>Ayuda Recuperar</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <style type="text/css">
  	 body {
   	 	font-family:tahoma;
@@ -21,5 +20,6 @@
 	<p>Para recuperar un problema, habrá que introducir una semilla válidad en el textbox Semilla</p>
 	<p>La semilla introducida tendrá que ser válida, y tendrá que seguir el formato que utiliza la aplicación para generarlas. En caso de no ser asi
 		la aplicación mostrará un mensaje de Semilla no válida por pantalla.<p>
+		<img src="../../images/ayPantRecuperar.png" >
 	</body>
 </html>
