--- a/src/help/html/Subsecuencia.html
+++ b/src/help/html/Subsecuencia.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	<title>Ayuda Subsecuencia Comun</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
 	  <style type="text/css">
  	 body {
   	 	font-family:tahoma;
@@ -19,9 +19,15 @@
 	<p>En esta página aparecerá toda la información acerca de la pantalla para generar el problema de la Subsecuencia Común Más Larga. <p>
 	<p>Para generar el problema deberemos establecer los parámetros pedidos por la herramienta. La pantalla aparecerá con valores por defecto que podrán
 		ser modificados por el usuario en cualquier momento.</p>
+		<img src="../../images/ayPantSubsecuencia.png" >
+	<p> El último parámetro a añadir es el slider de porcentaje de resupuestas (ver imagen inferior), este Slider contendrá un valor entre 0 y 100
+	que hace referencia al número de respuestas proporcionadas, siendo 100, todas las respuestas del problema y dejando todo el problema resuelto, 
+	y 0, ninguna respuesta proporcionada y todo el problema lleno de incógnitas. </p>
+	<img src="../../images/aySlider.jpg" >
 	<p>Una vez establecidos los parámetros deseados, pulsaremos el botón Generar para crear el problema del tipo Subsecuencia Común.<p>
 	<p>En el panel de al lado, de Vista Preliminar, aparecerán todos los problemas que se han generado, si se pulsa el botón limpiar reseteará todo
 	el panel, aunque no perderá los problemas generados.<p>
 		<p>Si se pulsa el botón exportar, la aplicación llevará diretamente a la ventana Exportar<a href="html/ExportarAyuda.html">.<p>
+	<img src="../../images/ayVistaPreliminar.jpg" >
 	</body>
 </html>
