--- a/src/help/html/principal.html
+++ b/src/help/html/principal.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Crear Ventanas de Ayuda con JavaHelp</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
   <style type="text/css">
  	 body {
   	 	font-family:tahoma;
@@ -23,18 +23,18 @@
 hara referencia al autor de la aplicación, otro nos llevara a la pantalla de exportar el fichero creado o 
 a la pantalla de recuperar un problema ya generado introduciendo la semilla correcta. Y finalmente el ultimo
 icono es el que nos abrirá la pantalla de ayuda. </p>
-<p><img src="../../images/ayPrincipal.jpg" ></p>
+<p><img src="../../images/ayPantallaPrincipal.png" ></p>
 
 <p> MOCHILA 
-<p><img src="../../images/ayIconoMochila.jpg" ></p>
+<p><img src="../../images/ayMochila.png" ></p>
 Este icono nos llevará a la pantalla donde podremos generar problemas del tipo Mochila de programación
 dinámica. En la ventana de Knaspack se explicará mejor esta ventana. </p>
 
-<p> SUBSECUENCIA COMÚN MÁS LARGA <p><img src="../../images/ayIconoSubsecuencia.jpg" ></p>
+<p> SUBSECUENCIA COMÚN MÁS LARGA <p><img src="../../images/aySubse.png" ></p>
 Este icono nos llevará a la pantalla donde podremos generar problemas del tipo Subsecuencia Común Más Larga. 
 En la ventana de Subsecuencia Común Más Larga se explicará mejor esta ventana. </p>
 
-<p> FLOYD <p><img src="../../images/ayIconoFloyd.jpg" ></p> 
+<p> FLOYD <p><img src="../../images/ayFloyd.png" ></p> 
 Este icono nos llevará a la pantalla donde podremos generar problemas del tipo Algoritmo de Floyd. 
 En la ventana de Problema de Viajero se explicará mejor esta ventana. </p>
 
@@ -42,11 +42,11 @@ En la ventana de Problema de Viajero se explicará mejor esta ventana. </p>
 Este icono nos llevará a la pantalla donde podremos generar problemas del tipo Multiplicacion de Matrices encadenadas de programación
 dinámica. En la ventana de MAtrices se explicará mejor esta ventana. </p>
 
-<p> ICONO 5 --- IMAGEN AQUI--- 
+<p> Exportar y Recuperar <p><img src="../../images/ayExportar.png" > </p>
 Este icono nos llevará a la pantalla donde podremos Exportar o Recuperar un problema.
 En la ventana de Recuperar se explicará mejor esta ventana. </p>
 
-<p> ICONO 6 --- IMAGEN AQUI--- 
+<p> Acerca De <p><img src="../../images/ayAcercaDe.png" > </p>
 Este botón simplemente nos mostrará toda la información acerca de la autoria de la aplicación </p>
 </body>
 </html>
